--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>masterchef</title>
+    <title>MasterChef</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class="container-fluid">
+
     <div class="up-icon">
       <a href="#header"><span class="glyphicon glyphicon-triangle-top"></span></a>
     </div>
@@ -24,7 +25,7 @@
             </button>
             <figure>
               <a href="index.html">
-                <img src="img/logo3.png" alt="Logo MasterChef" id="logo">
+                <img src="img/logo3.png" alt="Logo MasterChef">
               </a>
             </figure>
           </div>
@@ -59,31 +60,31 @@
 
           <div class="carousel-inner">
             <div class="item active">
-              <img src="img/slider1.jpg" alt="Los Angeles" style="width:100%;">
+              <img src="img/slider1.jpg" alt="slide1">
             </div>
 
             <div class="item">
-              <img src="img/slider2.jpg" alt="Chicago" style="width:100%;">
+              <img src="img/slider2.jpg" alt="slide2">
             </div>
 
             <div class="item">
-              <img src="img/slider3.jpg" alt="New york" style="width:100%;">
+              <img src="img/slider3.jpg" alt="slide3">
             </div>
           </div>
 
           <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Atras</span>
           </a>
           <a class="right carousel-control" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Adelante</span>
           </a>
         </div>
     </section>
 
-    <section class="row">
-      <h2 class="text-center" id="laGranFinal">La gran final</h2>
+    <section class="row" id="laGranFinal">
+      <h2 class="text-center">La gran final</h2>
       <p class="col-md-10 col-md-offset-1">
           Llegó el tan esperado final de la primera temporada de MasterChef Uruguay, el reality de cocina más importante del mundo, ahora hecho en nuestro país.
           En un clima de gran tensión, los cuatro participantes que todavía estaban en carrera se enfrentaron uno contra uno, en dos semifinales determinadas por sorteo:  Lourdes vs. Nilson  y  Leticia vs. Nicolás.
@@ -92,44 +93,46 @@
       </p>
     </section>
 
-    <section class="row">
-      <h2 class="text-center" id="multimedia">Multimedia</h2>
-      <video class="col-md-10 col-md-offset-1" controls preload="none" poster="img/plazaindep.jpg">
-        <source src="movies/video.mp4" type="video/mp4">
-        <source src="movies/video.ogv" type="video/ogv">
-        <source src="movies/video.webm" type="video/webm">
-          <p>No se puede reproducir el video</p>
-      </video>
+    <section class="row" id="multimedia">
+        <article>
+            <h2 class="text-center">Multimedia</h2>
+            <video class="col-md-10 col-md-offset-1" controls preload="none" poster="img/plazaindep.jpg">
+              <source src="movies/video.mp4" type="video/mp4">
+              <source src="movies/video.ogv" type="video/ogv">
+              <source src="movies/video.webm" type="video/webm">
+                <p>No se puede reproducir el video</p>
+            </video>
+        </article>
     </section>
 
-    <section class="row">
-      <div class="col-xs-12">
-          <h2 class="text-center" id="equipo">Equipo</h2>
+    <section class="row" id="equipo">
+      <div class="col-xs-12" id="jurado">
+          <h2 class="text-center">Equipo</h2>
           <figure class="col-xs-6 col-md-3">
             <figcaption class="text-center"><h5>Diego González</h5></figcaption>
-              <img src="img/conductor.jpg" style="width:100%;" alt="conductor">
+              <img src="img/conductor.jpg" alt="conductor">
             <figcaption>
           </figure>
           <figure class="col-xs-6 col-md-3">
             <figcaption class="text-center"><h5>Sergio Puglia</h5></figcaption>
-              <img src="img/jurado1.jpg" style="width:100%;" alt="jurado1">
+              <img src="img/jurado1.jpg" alt="jurado1">
             <figcaption>
           </figure>
           <figure class="col-xs-6 col-md-3">
             <figcaption class="text-center"><h5>Lucía Soria</h5></figcaption>
-              <img src="img/jurado2.jpg" style="width:100%;">
+              <img src="img/jurado2.jpg" alt="jurado2">
             <figcaption>
           </figure>
           <figure class="col-xs-6 col-md-3">
             <figcaption class="text-center"><h5>Laurent Lainé</h5></figcaption>
-              <img src="img/jurado3.jpg" style="width:100%;">
+              <img src="img/jurado3.jpg" alt="jurado3">
             <figcaption>
           </figure>
       </div>
     </section>
 
-    <section class="row">
-      <h2 class="text-center" id="pruebas">Pruebas</h2>
+    <section class="row" id="pruebas">
+      <h2 class="text-center">Pruebas</h2>
       <div class="col-md-3 col-xs-6">
         <h4 class="text-center">Caja misteriosa</h4>
         <p>
@@ -162,10 +165,10 @@
 
     <section class="row" id="participantes">
         <div class="col-xs-12">
-            <h2 class="text-center" id="participantes">Participantes</h2>
+            <h2 class="text-center">Participantes</h2>
             <figure class="col-xs-6 col-md-3">
                 <figcaption class="text-center"><h5>Leticia</h5></figcaption>
-                <img src="img/participantes/participante2_simple.jpg" id="img2" style="width:100%;" alt="participante 2">
+                <img src="img/participantes/participante2_simple.jpg" id="img2" alt="participante 2">
                 <figcaption>Tiene 35 años y vive en Libertad -San José-.
                 Tiene tres hijos, de 1, 3 y 4 años.
                 Se define como detallista, innovadora, aplicada y le cuesta delegar.
@@ -174,7 +177,7 @@
 
             <figure class="col-xs-6 col-md-3">
                 <figcaption class="text-center"><h5>Lourdes</h5></figcaption>
-                <img src="img/participantes/participante1_simple.jpg" id="img1" style="width:100%;" alt="participante 1">
+                <img src="img/participantes/participante1_simple.jpg" id="img1"alt="participante 1">
                 <figcaption>
                   Tiene 37 años y vive en Piedras Blancas. Tiene 18 hermanos y dos hijos de 16 y 10 años.
                   No tuvo oportunidad de ir al liceo. Es limpiadora y estampadora.
@@ -183,7 +186,7 @@
 
             <figure class="col-xs-6 col-md-3">
                 <figcaption class="text-center"><h5>Nicolás</h5></figcaption>
-                <img src="img/participantes/participante3_simple.jpg" id="img3" style="width:100%;" alt="participante 3">
+                <img src="img/participantes/participante3_simple.jpg" id="img3" alt="participante 3">
                 <figcaption>
                   Tiene 35 años y es odontólogo.
                   Su abuelo era italiano y tuvo una fábrica de pastas en nuestro país; de ahí heredó su amor por la gastronomía. 
@@ -192,11 +195,11 @@
 
             <figure class="col-xs-6 col-md-3">
                 <figcaption class="text-center"><h5>Nilson</h5></figcaption>
-                <img src="img/participantes/participante4_simple.jpg" id="img4" style="width:100%;" alt="participante 4">
+                <img src="img/participantes/participante4_simple.jpg" id="img4" alt="participante 4">
                 <figcaption>
                 Tiene 36 años y es de Pueblo Mendoza, en el Departamento de Florida. Está en pareja y tiene dos hijos chicos.
               </figcaption>
-              <a href="" data-toggle="modal" data-target="#exampleModalLong" style="text-decoration:none;color: rgb(208, 33, 61)">[Conocer más]</a>
+              <a href="" id="conoceMas" data-toggle="modal" data-target="#exampleModalLong">[Conocer más]</a>
             </figure>
       </div>
     </section>
@@ -211,7 +214,7 @@
             </button>
             <h3 class="modal-title text-center" id="exampleModalLongTitle">El Ganador</h3>
             <figure>
-                <img src="img/ganador.jpg" alt="" style="width:100%;">
+                <img src="img/ganador.jpg" alt="">
             </figure>
           </div>
           <div class="modal-body">
@@ -244,8 +247,8 @@
       </div>
     </div>
 
-    <section class="row">
-      <h2 class="text-center" id="premios">Premios</h2>
+    <section class="row" id="premios">
+      <h2 class="text-center">Premios</h2>
       <div class="col-md-12">
         <p>
           Además del trofeo de primer MasterChef de nuestro país, Nilson ganó: $U 200.000 en efectivo, un curso de repostería o cocina profesional en el Instituto Crandon Gastronómico; un viaje a Girona, España, para tomar clases en el El Celler de Can Roca (restaurant galardonado con tres estrellas Michelín); y  dos fines de semana en el hotel Radisson Victoria Plaza Hotel. Leticia, por su parte, además del reconocimiento del público, el jurado y la audiencia, se llevó una cocina completa con equipamiento Bosch y dos fines de semana en el Radisson Victoria Plaza Hotel.
@@ -253,8 +256,8 @@
       </div>
     </section>
 
-    <section class="row">
-      <h2 class="text-center" id="posiciones">Posiciones</h2>
+    <section class="row" id="posiciones">
+      <h2 class="text-center">Posiciones</h2>
       <div class="col-md-6 col-md-offset-0 col-xs-8 col-xs-offset-2">
         <img src="img/participantes_finalistas.jpg" style="width:100%;" alt="">
       </div>
